Gerando relatório com base no S3: Checar rota no front para garantir o envio das variáveis corretamente, criar looping para alertas e condicional(?) para a elaboração de relatórios